# catalog/images/api.py
@@ -13,8 +13,8 @@ from ..products.authorize import product_api_access_required
 from uuid import uuid4
 from .sse import tasks, image_sse
 from traceback import print_exc
-import os
 from dotenv import load_dotenv
+from pathlib import Path
 
 load_dotenv()
 
@@ -22,7 +22,7 @@ images = Blueprint("images", __name__, url_prefix = "/images")
 images.register_blueprint(image_sse)
 
 
-@images.post("/<usku_id>")
+@images.route("/<usku_id>", methods=['POST', 'PUT'])
 @login_required
 @brand_required
 @product_api_access_required
@@ -30,25 +30,31 @@ async def upload_image(usku_id):
     '''VERIFY AND UPLOAD IMAGE'''
     files = await request.files
     form = await request.form
-    type_id = request.args.get('type-id')
+    type_id = await productdb.Fetch.product_category_id(usku_id)
 
     try:
         metadata = json.loads(form.get("meta"))
     except Exception as e:
-        print(e)
+        print("Error while deserielizing metadata", e)
         print_exc()
         return jsonify({'status': 'failed', 'message': 'invalid stringify json'}), 400
 
     if not metadata:
         return jsonify({"status": "failed", "message": "metadata is not provided"}), 400
 
-    if not type_id:
-        return jsonify({"status": "failed", "message": "type-id is not provided"}), 400
-    
-    img_mandatory_keys = await categories_mongodb.Fetch.Attributes.Images(type_id).mandatory()
+    if type_id:
+        try:
+            img_mandatory_keys = await categories_mongodb.Fetch.Attributes.Images(type_id).mandatory()
 
-    if not Payload.check_required_payload(metadata, img_mandatory_keys):
-        return jsonify({'status': 'failed', 'message': 'mandatory image attributes not provided'}), 400
+            if request.method == 'POST':  
+                '''upload need to check for all the mandatory keys whether provided or not'''
+                if not Payload.check_required_payload(metadata, img_mandatory_keys):
+                    return jsonify({'status': 'failed', 'message': 'mandatory image attributes not provided'}), 400
+
+        except Exception as e:
+            print("error encountered while validating the payload", e)
+            print_exc()
+            return jsonify({'status': 'failed', 'message': 'Could not check the payload'}), 500
     
     '''Saving the files in temps'''
     image_dict_object = {}      # stores image `path`, `order` on key `image_type`
@@ -61,6 +67,9 @@ async def upload_image(usku_id):
         stream.seek(0, 2)          # end
         file_size = stream.tell()        # bytes
         stream.seek(pos)            # restore position
+
+        if not file:
+            return jsonify({'status': 'failed', 'message': 'Image can not be null'}), 422
         if file_size >= _max_allowed_image_size:
             return jsonify({'status': 'denied', 'message': 'Image too large', "allowed_size": "10MB"}), 413
 
@@ -81,7 +90,11 @@ async def upload_image(usku_id):
     """UPLOAD UNIT SO IT CAN BE RUN ASYNCHRONOUSLY ON THE IMAGE DATA"""
     try:
         job_id = uuid4().hex
-        bg_task = asyncio.create_task(services.background_upload_bulk_images(job_id, image_dict_object, usku_id))
+
+        if request.method == 'POST':
+            bg_task = asyncio.create_task(services.background_upload_bulk_images(job_id, image_dict_object, usku_id))
+        else:
+            ...
         bg_task.job_id = job_id
         bg_task.add_done_callback(services.on_bg_image_upload_task_done)
         tasks[job_id] = {"task": bg_task, 
@@ -104,66 +117,83 @@ async def upload_image(usku_id):
 @brand_required
 @product_api_access_required
 async def get_image_url(usku_id):
-    """Gets the image urls
-    """
+    """Gets the image urls"""
     arguments = request.args
     type = arguments.get("image-type")
-
-    if usku_id == None:
-        return jsonify({"status": "failed", "msg": "usku id is not provided"}), 409
-    
-
-    '''checking the usku_id'''
-    if not await productdb.Fetch.is_usku_id_exists(usku_id):
-        return jsonify({"status": "failed", "msg": "invalid usku-id"}), 409
-
+   
     image_urls = await mariadb.Fetch.image(usku_id, type)
-
     if image_urls == "error":
-        return jsonify({"status": "failed", "msg": "could not finish the request"}), 500
-    elif image_urls == None:
-        return jsonify({"status": "failed", "msg": "invalid image type"}), 409
+        return jsonify({"status": "failed", "message": "could not finish the request"}), 500
 
     if type is None:
-        print(image_urls)
-        image_urls = {value.get("image_type"): {"url": json.loads(value.get("image_url")), "order": value.get("image_order")} for  value in image_urls}
-    
+        if image_urls == None:
+            return jsonify({"status": "failed", "message": "Invalid image type or Image does not exists"}), 409
+
+        image_urls = {value.get("image_type"): 
+            {
+                "image_urls": json.loads(value.get("image_url")), 
+                "image_order": value.get("image_order")
+            } 
+            for  value in image_urls}
+    else:
+        if image_urls == None:
+            return jsonify({"status": "failed", "message": "Image does not exists"}), 409
+        
+        image_urls = {"image_urls": json.loads(image_urls.get("image_url")), "image_order": image_urls.get("image_order")}
+
     return jsonify(image_urls)
 
 
 
+# @images.put("/<usku_id>")
+# @login_required
+# @brand_required
+# @product_api_access_required
+# async def update_image(usku_id):
+#     ...
+#     type_id = await productdb.Fetch.product_category_id(usku_id)
+#     files = await request.files
+#     form = await request.form
 
-@images.get("/<image_variant>/<usku_id>/<image>")
-async def get_image(image_variant: str, usku_id: str, image: str):
-    key = f"{_product_image_root_key}/{image_variant}/{usku_id}/{image}"
+#     '''Mandatory image should not be updated as null'''
+#     mandatory_keys = await categories_mongodb.Fetch.Attributes.Images(type_id).mandatory()
+#     if 
 
-    if (image_variant not in _image_types) and (usku_id is None) and (image is None):
-        return jsonify({"status": "bad request", "message": "arguments not provided correctly"}), 400
 
-    mimetype = "image/webp" # default it's webp 
-    if image_variant == "original":
-        split_name = image.split(".")
-        extension = split_name[len(split_name)-1]
-        mimetype = f"image/{extension}" # if the original image is requested then the mimetype is changed
-
-    image = await asyncio.to_thread(read_object, _product_image_bucket, key)
-    
-    if image is None:
-        abort(404)
-    
-    return Response(image, mimetype=mimetype), 200
 
 
 
 @images.delete("/<usku_id>")
-@images.delete("/<usku_id>/<image_type>")
-async def delete(usku_id: str, image_type: str = None):
-    if not usku_id :
-        return jsonify({"status": "bad request", "message": "usku id is not provided"}), 400
+@product_api_access_required
+async def delete(usku_id: str):
+    image_type = request.args.get('image-type', None)
 
     response = await services.delete_images(usku_id, image_type)
-
     if response.get("error"):
         return jsonify(response), 500
 
     return jsonify({"status": "successful", "message": "successfully deleted the images"}), 200
+
+
+
+@images.get("/<path:key>")
+async def get_image(key):
+    mimetype = "image/webp" # default it's webp 
+    suffix = Path(key).suffix
+    if ".webp" != suffix:
+        extension = suffix.lstrip(".")
+        mimetype = "image/"+extension   # if the original image is requested then the mimetype is changed
+
+    try:
+        image = await asyncio.to_thread(read_object, _product_image_bucket, key=f"{_product_image_root_key}/{key}")
+        if type(image) == dict:
+            if 404 == image.get('error'):
+                return jsonify({'status': 'failed', 'message': 'Image not found'}), 404
+    except Exception as e:
+        print(e)
+        return jsonify({'status': 'failed', 'message': 'Unexpected error occured'}), 500
+
+    if image is None:
+        abort(404)
+    
+    return Response(image, mimetype=mimetype), 200
